--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
-    "ionicons": "^7.1.2",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
+    "vue-ionicons": "^3.0.5",
     "vue-router": "^3.6.5"
   },
   "devDependencies": {
