--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode dev",
+    "prd": "vue-cli-service serve --mode prd",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
