--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 NODE_ENV = development
 VUE_APP_URL = http://localhost:8000/api
 VUE_APP_IMAGE = http://localhost:8000/images/
+VUE_APP_ADMIN = http://localhost:8001/
