--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.15.13",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
+    "vue-cookies": "^1.8.3",
     "vue-ionicons": "^3.0.5",
     "vue-router": "^3.6.5"
   },
