--- a/.env.prd
+++ b/.env.prd
@@ -2,4 +2,4 @@ NODE_ENV = prd_test
 VUE_APP_URL = http://120.77.25.98:8000/api
 VUE_APP_IMAGE = http://120.77.25.98:8000/images/
 VUE_APP_ADMIN = http://120.77.25.98:8001/
-VUE_APP_KOA2 = http://120.77.25.98:8000/
+VUE_APP_KOA = http://120.77.25.98:8000/api
